<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天鹰黄历</string>
    <string name="ok_btn">确定</string>
    <string name="cancel_btn">取消</string>
    <string name="huangli">黄历</string>
    <string name="huangli_nodate">没有该月数据，是否重新选择日期？</string>
    <string name="huangli_nodate2">没有该月数据！</string>
    <string name="huangli_search">黄历查询</string>
    <string name="huangli_yi">宜：</string>
    <string name="huangli_ji">忌：</string>
    <string name="huangli_chong">冲：</string>
    <string name="huangli_sha">煞：</string>
    <string name="huangli_cheng">成：</string>
    <string name="huangli_zhengchong">正冲</string>
    <string name="huangli_taishen">胎神</string>
    <string name="huangli_share_title">黄历分享</string>
    <string name="huangli_back">回到今天</string>
    <string name="huangli_toast1">今天已是</string>
    <string name="huangli_toast2">，不用再点啦！</string>
    <string name="huangli_nodata_dg_title">提示</string>

</resources>