<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10.0dip"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@id/layout_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/tv_date_month2"
            style="@style/huangli_item_value_text"
            android:layout_width="80.0dip"
            android:layout_gravity="center"
            android:layout_marginRight="22.0dip"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="#ffbf0003"
            android:textSize="16.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/tv_date_year2"
            style="@style/huangli_item_value_text"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#ffbf0003"
            android:textSize="35.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/tv_date_week2"
            android:layout_width="80.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30.0dip"
            android:gravity="center"
            android:textColor="#ffbf0003"
            android:textSize="16.0sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20.0dip"
        android:layout_marginTop="-40.0dip"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@id/tv_date_day2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffbf0003"
            android:textSize="160.0sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@id/tv_huangli_date_year_month2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/huangli_hongbg"
                android:gravity="center"
                android:text="@string/huangli_nodate2"
                android:textColor="#ffc99c4e" />

            <TextView
                android:id="@id/tv_huangli_date_day2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45.0dip"
                android:layout_marginTop="12.0dip"
                android:textColor="#ffbf0003"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/huangli_logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@id/tv_nongli_date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/huangli_hongbg"
                android:gravity="center"
                android:text="@string/huangli_nodate2"
                android:textColor="#ffc99c4e" />

            <TextView
                android:id="@id/tv_jieqi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="12.0dip"
                android:textColor="#ffbf0003"
                android:textSize="15.0sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@id/linearLayout8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:orientation="vertical" >

            <TextView
                android:id="@id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.0dip"
                android:text="@string/huangli_taishen"
                android:textColor="#ffbf0003" />

            <TextView
                android:id="@id/tv_taishen2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25.0dip"
                android:background="@drawable/huangli_hongbg"
                android:gravity="center"
                android:maxWidth="25.0sp"
                android:text="@string/huangli_nodate2"
                android:textColor="#ffc99c4e"
                android:textSize="20.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/linearLayout9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-10.0dip"
            android:layout_marginRight="-10.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huangli_yi"
                    android:textColor="#ffbf0003"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@id/tv_yi2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huangli_nodate2"
                    android:textColor="#ffbf0003"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/linearLayout11"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="5.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huangli_ji"
                    android:textColor="#ff000000"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@id/tv_ji2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff000000"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huangli_chong"
                    android:textColor="#ff652d00"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@id/tv_chong2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff652d00"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huangli_sha"
                    android:textColor="#ff652d00"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@id/tv_sha2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff652d00"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huangli_cheng"
                    android:textColor="#ff652d00"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@id/tv_cheng2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff652d00"
                    android:textSize="16.0sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:gravity="right"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1.0dip"
                android:text="@string/huangli_zhengchong"
                android:textColor="#ffbf0003" />

            <TextView
                android:id="@id/tv_zhengchong2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25.0dip"
                android:background="@drawable/huangli_hongbg"
                android:gravity="center"
                android:maxWidth="25.0sp"
                android:text="@string/huangli_nodate2"
                android:textColor="#ffc99c4e"
                android:textSize="20.0sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayout12"
        android:layout_width="wrap_content"
        android:layout_height="10.0dip"
        android:orientation="vertical" />

</LinearLayout>